# Logic-Gate-Simulator

./: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
includes/: Controllers.hpp  Errors.hpp  Gate.hpp  Grid.hpp  Managers.hpp  Pin.hpp  Renderers.hpp  Simulation.hpp  Wire.hpp
src/: Controllers.cpp  Errors.cpp  Gate.cpp  Grid.cpp  Pin.cpp  Renderers.cpp  Wire.cpp  main.cpp
src/gates/: And.cpp
